solfaml-parser/src/snapshots/solfaml_parser__parser__tests__lyrics_parsing.snap
---
source: src/parser.rs
expression: lyrics
---
Ok(
    LyricsTree {
        prefix: Some(
            "1.",
        ),
        root: Space(
            String(
                "do",
            ),
            Concat(
                String(
                    "re",
                ),
                Space(
                    NewLineSuffixed(
                        String(
                            "mi",
                        ),
                    ),
                    Space(
                        String(
                            "fasola",
                        ),
                        Space(
                            Split(
                                String(
                                    "ti",
                                ),
                                String(
                                    "e",
                                ),
                            ),
                            Space(
                                String(
                                    "do",
                                ),
                                Placeholder,
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
