solfaml-parser/src/snapshots/solfaml_parser__parser__tests__measure_parsing.snap
---
source: solfaml-parser/src/parser.rs
expression: measure
---
Ok(
    [
        Measure {
            kind: Normal,
            chunks: [
                Separation(
                    Normal,
                ),
            ],
        },
        Measure {
            kind: Normal,
            chunks: [
                Pulse(
                    Note(
                        Note {
                            base: D,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                ),
                Separation(
                    Normal,
                ),
                Pulse(
                    Note(
                        Note {
                            base: R,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                ),
                Division(
                    Half,
                ),
                Pulse(
                    Note(
                        Note {
                            base: M,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                ),
                Division(
                    Quarter,
                ),
                Pulse(
                    Note(
                        Note {
                            base: F,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                ),
            ],
        },
        Measure {
            kind: Normal,
            chunks: [
                Pulse(
                    Note(
                        Note {
                            base: S,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                ),
                Separation(
                    Normal,
                ),
                Underline,
                Pulse(
                    Note(
                        Note {
                            base: L,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                ),
                Division(
                    Half,
                ),
                Pulse(
                    Note(
                        Note {
                            base: T,
                            variant: Base,
                            octave: Base,
                        },
                    ),
                ),
                Underline,
                Division(
                    Quarter,
                ),
                Pulse(
                    ProlongedNote,
                ),
            ],
        },
    ],
)
