solfaml-parser/src/snapshots/solfaml_parser__parser__tests__measure_repetition_parsing.snap
---
source: solfaml-parser/src/parser.rs
expression: result
---
Ok(
    Solfa {
        header: Header {
            title: None,
            author: None,
            time: None,
            key: None,
            description: None,
            tempo: None,
            vocals: None,
            extra: {},
        },
        staffs: [
            Staff {
                dynamics: [],
                lines: [
                    StaffLine {
                        measures: [
                            Measure {
                                kind: Normal,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: R,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: RepeatStart,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: M,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: F,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: RepeatEnd,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: S,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: L,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: Normal,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: T,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Up(
                                                    1,
                                                ),
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                        ],
                    },
                    StaffLine {
                        measures: [
                            Measure {
                                kind: Normal,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: R,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: RepeatStart,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: M,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: F,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: RepeatEnd,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: S,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: L,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: Normal,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: T,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Up(
                                                    1,
                                                ),
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                        ],
                    },
                    StaffLine {
                        measures: [
                            Measure {
                                kind: Normal,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: R,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: RepeatStart,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: M,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: F,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: RepeatEnd,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: S,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: L,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: Normal,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: T,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Up(
                                                    1,
                                                ),
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                        ],
                    },
                    StaffLine {
                        measures: [
                            Measure {
                                kind: Normal,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: R,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: RepeatStart,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: M,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: F,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: RepeatEnd,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: S,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: L,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                            Measure {
                                kind: Normal,
                                root: Division(
                                    MeasureDivision {
                                        lhs: Note(
                                            Note {
                                                base: T,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                        rhs: Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Up(
                                                    1,
                                                ),
                                            },
                                        ),
                                        kind: Normal,
                                    },
                                ),
                            },
                        ],
                    },
                ],
                lyrics: [],
            },
        ],
    },
)
