solfaml-parser/src/snapshots/solfaml_parser__parser__tests__per_voice_lyrics_parsing.snap
---
source: solfaml-parser/src/parser.rs
expression: result
---
Ok(
    Solfa {
        header: Header {
            title: None,
            author: None,
            time: None,
            key: None,
            description: None,
            tempo: None,
            vocals: None,
            extra: {},
        },
        staffs: [
            Staff {
                dynamics: [],
                lines: [
                    StaffLine {
                        measures: [
                            Measure {
                                kind: Normal,
                                chunks: [
                                    Pulse(
                                        Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                    ),
                                    Separation(
                                        Normal,
                                    ),
                                    Pulse(
                                        Note(
                                            Note {
                                                base: R,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ],
                    },
                    StaffLine {
                        measures: [
                            Measure {
                                kind: Normal,
                                chunks: [
                                    Pulse(
                                        Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                    ),
                                    Separation(
                                        Normal,
                                    ),
                                    Pulse(
                                        Note(
                                            Note {
                                                base: R,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ],
                    },
                    StaffLine {
                        measures: [
                            Measure {
                                kind: Normal,
                                chunks: [
                                    Pulse(
                                        Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                    ),
                                    Separation(
                                        Normal,
                                    ),
                                    Pulse(
                                        Note(
                                            Note {
                                                base: R,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ],
                    },
                    StaffLine {
                        measures: [
                            Measure {
                                kind: Normal,
                                chunks: [
                                    Pulse(
                                        Note(
                                            Note {
                                                base: D,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                    ),
                                    Separation(
                                        Normal,
                                    ),
                                    Pulse(
                                        Note(
                                            Note {
                                                base: R,
                                                variant: Base,
                                                octave: Base,
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ],
                    },
                ],
                lyrics: [
                    IndexedLyricsSet {
                        index: 1,
                        lyrics: [
                            LyricsTree {
                                prefix: Some(
                                    ">",
                                ),
                                root: Space(
                                    String(
                                        "do",
                                    ),
                                    String(
                                        "re",
                                    ),
                                ),
                            },
                        ],
                    },
                    IndexedLyricsSet {
                        index: 3,
                        lyrics: [
                            LyricsTree {
                                prefix: Some(
                                    ">",
                                ),
                                root: Space(
                                    String(
                                        "doo",
                                    ),
                                    String(
                                        "ree",
                                    ),
                                ),
                            },
                        ],
                    },
                ],
            },
        ],
    },
)
